migrated to jda5, starting music stuff, why am i still on this branch